--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: "无远弗届"
 baseurl: # the subpath of your site, e.g. "/blog"
 url: https://luorongya.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: /images/site-logo.png # path of site logo, e.g. "/images/logo.png"
-date_format: "%B %-d, %Y"
+date_format: "%Y-%m-%d"
 read_time: # reading time estimates, e.g. true
 words_per_minute: # 200
 mathjax: true # MathJax equations, e.g. true
