--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 remote_theme: "mmistakes/so-simple-theme"
 # remote_theme: mmistakes/so-simple-theme
 locale: zh-CN
-title: ""
+title: "Rongya"
 description: "无远弗届"
 baseurl: # the subpath of your site, e.g. "/blog"
 url: https://luorongya.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
