--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-remote_theme: "mmistakes/so-simple-theme"
+# remote_theme: "mmistakes/so-simple-theme"
 # remote_theme: mmistakes/so-simple-theme
 locale: zh-CN
 title: "Rongya"
-description: "无远弗届"
+description: ""
 baseurl: # the subpath of your site, e.g. "/blog"
-url: https://luorongya.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: http://www.luorongya.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: # /images/site-logo.png # path of site logo, e.g. "/images/logo.png"
 date_format: "%Y-%m-%d"
 read_time: # reading time estimates, e.g. true
