--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # Sample site navigation bar links
 
-- title: 首页
+# - title: 首页
+#   url: /
+- title: 关于
   url: /
 - title: 文章
   url: /posts/
-- title: 关于
-  url: /about/
 # - title: 分类
 #   url: /categories/
 # - title: 标签
